--- a/templates/login.html
+++ b/templates/login.html
@@ -117,8 +117,8 @@
     
     <form action="/login" method="post">
       <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" required autofocus>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required autofocus>
       </div>
       
       <div class="form-group">
